[project]
name = "random-sprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-deepseek>=1.0.1",
    "openrouter>=0.9.1",
    "pymongo>=4.17.0",
    "qu>=1.2.5",
    "redis>=7.4.0",
]
