[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"   # ✅ correct

[project]
name = "random-sprint"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.6.0",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.6",
    "pymongo>=4.17.0",
    "langchain-deepseek>=1.0.1",
    "openrouter>=0.9.1",
    "redis[search]>=7.4.0",
    "openai>=2.38.0",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
